--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="frame-group">
         <img
           class="frame-group-child"
-          alt=""
+          alt="frame-group-child"
           src="./public/rectangle-14@2x.png"
         />
 
@@ -39,14 +39,14 @@
         <img
           class="f-r-a-m-e1"
           loading="eager"
-          alt=""
+          alt="f-r-a-m-e1"
           src="./public/New Year Photo.png"
         />
       </div>
       <section class="vector-parent">
-        <img class="vector-icon" alt="" src="./public/vector@2x.png" />
+        <img class="vector-icon" alt="vector-icon" src="./public/vector@2x.png" />
 
-        <img class="vector-icon1" alt="" src="./public/vector-1.svg" />
+        <img class="vector-icon1" alt="vector-1" src="./public/vector-1.svg" />
 
         <div class="f-r-a-m-e2">
           <div class="f-r-a-m-e3">
@@ -64,12 +64,12 @@
         <img
           class="frame-item"
           loading="eager"
-          alt=""
+          alt="frame-item"
           src="./public/group-70.svg"
         />
       </section>
       <section class="vector-group">
-        <img class="vector-icon2" alt="" src="./public/vector.svg" />
+        <img class="vector-icon2" alt="vector-icon2" src="./public/vector.svg" />
 
         <div class="place-new-park-container">
           <p class="place-new-park-hotel">
@@ -103,7 +103,7 @@
           <img
             class="frame-inner"
             loading="eager"
-            alt=""
+            alt="frame-inner"
             src="./public/group-20.svg"
           />
         </div>
@@ -116,7 +116,7 @@
             <img
               class="group-icon"
               loading="eager"
-              alt=""
+              alt="group-icon"
               src="./public/group-96.svg"
             />
           </div>
@@ -141,7 +141,7 @@
         <div class="welcome-frame">
           <img
             class="welcome-frame-child"
-            alt=""
+            alt="welcome-frame-child"
             src="./public/group-79@2x.png"
           />
 
@@ -150,7 +150,7 @@
               <img
                 class="rectangle-icon"
                 loading="eager"
-                alt=""
+                alt="rectangle-icon"
                 src="./public/rectangle-1@2x.png"
               />
 
@@ -173,42 +173,42 @@
           <img
             class="text-frames-icon"
             loading="eager"
-            alt=""
+            alt="text-frames-icon"
             src="./public/rectangle-3@2x.png"
           />
 
           <img
             class="text-frames-icon1"
             loading="eager"
-            alt=""
+            alt="text-frames-icon1"
             src="./public/rectangle-4@2x.png"
           />
 
           <img
             class="text-frames-icon2"
             loading="eager"
-            alt=""
+            alt="text-frames-icon2"
             src="./public/rectangle-5@2x.png"
           />
 
           <img
             class="text-frames-icon3"
             loading="eager"
-            alt=""
+            alt="text-frames-icon3"
             src="./public/rectangle-6@2x.png"
           />
 
           <img
             class="text-frames-icon4"
             loading="eager"
-            alt=""
+            alt="text-frames-icon4"
             src="./public/rectangle-7@2x.png"
           />
 
           <img
             class="text-frames-icon5"
             loading="eager"
-            alt=""
+            alt="text-frames-icon5"
             src="./public/rectangle-8@2x.png"
           />
         </div>
@@ -220,7 +220,7 @@
             <img
               class="newsletter-frame-child"
               loading="eager"
-              alt=""
+              alt="newsletter-frame-child"
               src="./public/group-61.svg"
             />
 
@@ -255,7 +255,7 @@
                 <img
                   class="frame-icon"
                   loading="eager"
-                  alt=""
+                  alt="frame-icon"
                   src="./public/frame.svg"
                 />
 
@@ -265,7 +265,7 @@
                 <img
                   class="frame-icon1"
                   loading="eager"
-                  alt=""
+                  alt="frame-icon1"
                   src="./public/frame-1.svg"
                 />
 
@@ -277,7 +277,7 @@
         <img
           class="line-1-stroke"
           loading="eager"
-          alt=""
+          alt="line-1-stroke"
           src="./public/line-1-stroke.svg"
         />
 
@@ -323,7 +323,7 @@
         <img
           class="line-2-stroke"
           loading="eager"
-          alt=""
+          alt="line-2-stroke"
           src="./public/line-1-stroke.svg"
         />
 
