--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>Happy New Year !</title>
     <link rel="shortcut icon" href="./public/new-year-2024-icon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap"
