--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="f-r-a-m-e3">
             <div class="vector">
               <h1 class="welcome-to-midnight">Welcome to midnight party</h1>
-              <div class="Where-joy-meets">
+              <div class="dolor-sit-amet">
                Where joy meets the night's mystic charm. Here, bonds grow in moon's gentle light, and melodies float, weaving with hopes and tales. In this enchanted hour, each second is a tale to unfold, a treasure to keep in the soul's serene depths.
               </div>
             </div>
