--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         />
 
         <div class="all-rights-reserved-parent">
-          <div class="all-rights-reserved">2024, All Rights Reserved.</div>
+          <div class="all-rights-reserved">&copy; 2024, All Rights Reserved.</div>
           <button class="unsubscribe custom-button">Unsubscribe</button>
         </div>
       </section>
